--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@reach/router": "^1.3.4",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9",
@@ -48,6 +49,7 @@
     "@types/dexie": "^1.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "node-sass": "^5.0.0",
