--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9",
     "dexie": "^3.0.3",
-    "dexie-export-import": "^1.0.0",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -52,6 +52,7 @@
     "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "node-sass": "^5.0.0",
     "pretier": "^0.0.1"
   }
