--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
